fix error contrast

--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #000000!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine:hover {
